# Lockes-Adventures

./: .gitignore  CMakeLists.txt
includes/: defs.h  prototypes.h  structs.h
ressources/: map1.txt
ressources/map/: map1.txt
src/: attaques.c  blagule.c  direction.c  draw.c  font.c  init.c  input.c  main.c  map.c  masterBlagule.c  monster.c  oneHand.c  player.c  sounds.c
